# utilities

./: CMakeLists.txt  README.md
data/: hexagonal.99_99.occlusions
python/: check_prep_world.py  check_world_creation.ipynb  create_world.py
scripts/: build_utilities  create_world  prep_world  set_cellworld_cache
src/: create_lppos.cpp  create_options.cpp  create_paths.cpp  create_predator_destinations.cpp  create_robot_occlusions.cpp  create_spawn_locations.cpp  create_visibility.cpp
